# glue-plotly

./: .pre-commit-config.yaml  .ruff.toml  CHANGES.md  CHANGES.rst  MANIFEST.in  PlotlyViewerExample.ipynb  README.rst  RELEASE.rst  airplanes.html  aitoff.html  azure-pipelines.yml  hist.html  hist1.html  index.html  linear-vector-line.html  plot.html  plot3d-vector.html  plot3d.html  polar.html  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_workflows.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
assets/css/: main.css
doc/: PlotlyViewerExample.ipynb
docs/: PlotlyViewerExample.ipynb  airplanes.html  airplanes_3d.html  airplanes_histogram.html  histogram.html  index.html  profile.html  w5_dendro.html
docs/.ipynb_checkpoints/: PlotlyViewerExample-checkpoint.ipynb
docs/assets/css/: main.css
docs/assets/img/: PlotlyViewerExample.ipynb
glue_plotly/: __init__.py  conftest.py  export_dialog.py  jupyter_base_export_tool.py  make_sortable.py  make_sortable.ui  save_hover.py  save_hover.ui  sort_components.py  sort_components.ui  utils.py  volume_options.py  volume_options.ui
glue_plotly/common/: __init__.py  base_3d.py  common.py  dendrogram.py  dotplot.py  histogram.py  image.py  matplotlib.py  profile.py  scatter2d.py  scatter3d.py  volume.py
glue_plotly/common/tests/: test_dendrogram.py  test_dotplot.py  test_histogram.py  test_profile.py  test_scatter2d.py  utils.py
glue_plotly/html_exporters/: __init__.py  base_save_hover.py  dendrogram.py  histogram.py  histogram2d.py  hover_utils.py  image.py  profile.py  scatter2d.py  scatter3d.py  table.py  volume3d.py
glue_plotly/html_exporters/bqplot/: __init__.py  base.py  histogram.py  image.py  profile.py  scatter2d.py
glue_plotly/html_exporters/bqplot/tests/: base.py  test_base.py  test_histogram.py  test_image.py  test_profile.py  test_scatter2d.py
glue_plotly/html_exporters/jupyter/: __init__.py  histogram.py  image.py  profile.py  save_hover.py  save_hover.vue  scatter2d.py  scatter3d.py  vispy_volume.py  vispy_volume3d.py  volume.py
glue_plotly/html_exporters/jupyter/tests/: test_base.py  test_histogram.py  test_image.py  test_ipyvolume_scatter3d.py  test_ipyvolume_volume.py  test_profile.py  test_scatter2d.py  test_scatter3d.py  test_vispy_scatter3d.py  test_vispy_volume.py  test_volume.py
glue_plotly/html_exporters/qt/: __init__.py  dendrogram.py  histogram.py  image.py  options_state.py  profile.py  save_hover.py  scatter2d.py  scatter3d.py  table.py  utils.py  volume.py
glue_plotly/html_exporters/qt/tests/: base.py  test_base.py  test_dendrogram.py  test_histogram.py  test_image.py  test_profile.py  test_scatter2d.py  test_scatter3d.py  test_table.py  test_volume.py
glue_plotly/html_exporters/tests/: test_dendrogram.py  test_histogram.py  test_image.py  test_profile.py  test_scatter2d.py  test_scatter3d.py  test_table.py
glue_plotly/viewers/: layer_artist.py  scatter_viewer.py  tools.py  viewer.py
glue_plotly/viewers/common/: __init__.py  state.py  tools.py  viewer.py
glue_plotly/viewers/common/tests/: __init__.py  base_viewer_tests.py  test_tools.py  utils.py
glue_plotly/viewers/histogram/: dotplot_layer_artist.py  layer_artist.py  state.py  viewer.py  viewer_state_widget.py  viewer_state_widget.vue
glue_plotly/viewers/histogram/tests/: test_dotplot.py  test_viewer.py
glue_plotly/viewers/scatter/: layer_artist.py  layer_state_widget.py  layer_state_widget.vue  state.py  viewer.py  viewer_state_widget.py  viewer_state_widget.vue
glue_plotly/viewers/scatter/tests/: log.txt  test_viewer.py
glue_plotly/web/: export_plotly.py
glue_plotly/web/qt/: __init__.py  exporter.py
glue_plotly/web/qt/tests/: test_exporter.py  test_plotly.py
