[metadata]
name = glue-plotly
provides = glue_plotly
author = Thomas Robitaille and Catherine Zucker
author_email = glue.viz@gmail.com
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/glue-viz/glue-plotly
description = Experimental plot.ly exporters for glue
long_description = file: README.rst

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
install_requires =
    glue-core>=0.14
    plotly
    chart-studio

[options.extras_require]
test =
    pytest
    pytest-cov
    mock
    glue-vispy-viewers
qt =
    PySide2;python_version=="2"
    PyQt5;python_version>="3"
jupyter =
    glue-jupyter

[options.package_data]
* = *.png, *.ui

[options.entry_points]
glue.plugins =
    glue_plotly=glue_plotly:setup
