[metadata]
name = glue-plotly
provides = glue_plotly
author = Thomas Robitaille and Catherine Zucker
author_email = glue.viz@gmail.com
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/glue-viz/glue-plotly
description = Experimental plot.ly exporters for glue
long_description = file: README.rst

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
install_requires =
    glue-core>=1.13.1
    plotly
    chart-studio

[options.extras_require]
test =
    pytest
    pytest-cov
    mock
qt =
    glue-qt
    PySide2;python_version=="2"
    PyQt5;python_version>="3"
3d =
    glue-vispy-viewers>=1.2.1
jupyter =
    glue-jupyter
    ipyvuetify
    ipyfilechooser

[options.package_data]
* = *.png, *.svg, *.ui

[options.entry_points]
glue.plugins =
    glue_plotly=glue_plotly:setup
